add slots to recipescraper